<resources>
    <string name="app_name">Proyecto Clase 3</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder0">0</string>
    <string name="lorem">Vestibulum vulputate bibendum arcu ut blandit. Nam iaculis ac elit ac viverra. Nunc hendrerit massa id est molestie, et mattis justo vestibulum. Aliquam imperdiet, tortor eget facilisis consequat, diam risus molestie lectus, pharetra vulputate tortor augue in arcu. In suscipit diam vel est consequat commodo. Nulla interdum dui tellus, </string>
    <string name="numeroa">Escribe numero A</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="numerob">Escribe numero b</string>
    <string name="errorb">El numero b esta vacio</string>
</resources>
