<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_padding"
            android:id="@+id/resultado"
            android:text="@string/placeholder0"
            android:textAlignment="center"
            android:textSize="@dimen/resultado"
            android:textAppearance="?android:textAppearanceLarge"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultado"
            android:hint="@string/numeroa"
            android:id="@+id/numa"
            android:inputType="number"
            android:layout_margin="@dimen/fab_padding"
            android:layout_toStartOf="@id/sumar"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/sumar"
            android:layout_below="@+id/resultado"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_padding"
            android:text="@string/sumar"
            android:drawableTop="@drawable/ic_add_black_24dp"
            />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numa"
            android:hint="@string/numerob"
            android:id="@+id/numb"
            android:layout_margin="@dimen/fab_padding"
            android:layout_toStartOf="@id/sumar"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/restar"
            android:layout_below="@+id/sumar"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_padding"
            android:text="@string/restar"
            android:drawableTop="@drawable/ic_indeterminate_check_box_black_24dp"
            />
</RelativeLayout>
